FIX - itinerary image height, south africa map visible

--- a/inc/scss/2components/_body.scss
+++ b/inc/scss/2components/_body.scss
@@ -675,7 +675,7 @@
             .itinerary-carousel {
                 position: relative;
                 .owl-item {
-                    height: 20rem;
+                    height: 25rem;
                 }
             }
             .carousel-wrapper {
